# named_pipe_sample

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
